# photonix-camera

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/bridge/: bridge_service.dart
lib/src/features/camera/: camera_channel.dart  camera_preview_widget.dart  camera_screen.dart  capture_coordinator.dart
lib/src/features/debug/: bridge_test_screen.dart
lib/src/features/gallery/: gallery_screen.dart
lib/src/features/photo_viewer/: photo_viewer_screen.dart
lib/src/features/settings/: settings_screen.dart
lib/src/integration_test/: app_test.dart
lib/src/models/: camera_state.dart
lib/src/providers/: camera_provider.dart  device_info_provider.dart  gallery_provider.dart  processing_provider.dart  providers.dart  settings_provider.dart
lib/src/router/: app_router.dart
lib/src/rust/: frb_generated.web.dart
lib/src/rust/api/: image_api.dart
lib/src/rust/pipeline/: orchestrator.dart
lib/src/shared/theme/: app_theme.dart
lib/src/shared/widgets/: capture_button.dart  error_screen.dart  permission_gate.dart  processing_overlay.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/benches/: pipeline_bench.rs
rust/src/: lib.rs
rust/src/ai/: mod.rs  model_cache.rs  session_pool.rs
rust/src/ai/models/: denoiser.rs  depth.rs  enhancer.rs  mod.rs  scene_cls.rs  super_res.rs
rust/src/ai/preprocess/: mod.rs  normalize.rs  tile.rs
rust/src/api/: image_api.rs  mod.rs
rust/src/compute/: burst_stack.rs  color.rs  color_science.rs  exposure.rs  hdr_merge.rs  mod.rs  sharpen.rs  tone_map.rs
rust/src/pipeline/: bokeh.rs  depth_refine.rs  face.rs  mod.rs  orchestrator.rs  scene.rs
rust/src/utils/: memory.rs
rust/tests/: ai_integration.rs  pipeline_integration.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_photonix_camera.podspec
rust_builder/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
rust_builder/ios/Runner/: GeneratedPluginRegistrant.m
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_photonix_camera.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: prepare_models.py  quality_check.py  quantize_models.py  run_device_bench.ps1
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+10 files in other folders)
