[package]
name = "photonix_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[lib]
name = "photonix_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

[dependencies.ort]
version = "2.0.0-rc.12"
default-features = false
features = ["std", "ndarray", "download-binaries", "tls-native"]

[dependencies.ndarray]
version = "0.17"
features = ["rayon"]

[dependencies.image]
version = "0.25"
default-features = false
features = ["jpeg", "png"]

[dependencies.imageproc]
version = "0.25"

[dependencies.nalgebra]
version = "0.33"
features = ["serde-serialize"]

[dependencies.rayon]
version = "1.10"

[dependencies.anyhow]
version = "1.0"

[dependencies.log]
version = "0.4"

[dependencies.android_log]
version = "0.1"

[dependencies.once_cell]
version = "1.20"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

# [target.'cfg(target_os = "android")'.dependencies]
# jni = { version = "0.21", default-features = false }

[target.'cfg(target_os = "android")'.dependencies.ort]
version = "2.0.0-rc.12"
default-features = false
features = ["std", "ndarray", "nnapi", "xnnpack"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[dependencies.num_cpus]
version = "1.16"
